--- a/intermediate_r_slides.html
+++ b/intermediate_r_slides.html
@@ -573,19 +573,7 @@ Maybe you need to calculate the mean and standard deviation of a bunch of column
 ```r
 yugoslavia %&gt;%
     filter(year == 1982) %&gt;%
-    summarize_at(vars(lifeExp, pop), funs(mean, sd))
-```
-
-```
-## Warning: funs() is soft deprecated as of dplyr 0.8.0
-## please use list() instead
-## 
-## # Before:
-## funs(name = f(.)
-## 
-## # After: 
-## list(name = ~f(.))
-## This warning is displayed once per session.
+    summarize_at(vars(lifeExp, pop), list(~mean(.), ~sd(.)))
 ```
 
 ```
